sto nam megastudije ne govore

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -151,6 +151,8 @@
             \citealp[ch. 6]{harleyPsychologyLanguageData2014})
             \egroup
         \begin{itemize}
+            \pause
+
             \item kako definirati i mjeriti učestalost?
 
             \pause
@@ -171,6 +173,64 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}
+    \begin{itemize}
+        \item vrijedni resursi za proučavanje jezika
+
+        \begin{itemize}
+            \item generalizacija nalaza na cjelokupni jezik
+                \tinycitep{yarkoniGeneralizabilityCrisis2019}
+
+            \pause
+
+            \item ,,prototipno`` testiranje hipoteza
+
+            \pause
+
+            \item preciznija procjena parametara i prijatelji
+                \tinycitep{yarkoniChoosingPredictionExplanation2017,
+                mengStatisticalParadisesParadoxes2018}
+        \end{itemize}
+
+    \end{itemize}
+\end{frame}
+
+\subsection{Što nam megastudije ne govore?}
+
+\begin{frame}
+    \frametitle{Što nam megastudije ne govore o jeziku?}
+
+    \hspace*{\fill}
+    \begin{minipage}{25em}{
+        ,,In certain circles there is an almost religious faith that we can find
+        the answers to [causal] questions in the data itself, if only we are
+        sufficiently clever at data mining. However, [\ldots] causal questions
+        can never be answered from data alone.`` \citet[str.
+        351]{pearlBookWhyNew2018}
+    } 
+    \end{minipage}
+    \hspace*{\fill}
+
+\end{frame}
+
+\begin{frame}
+    \begin{itemize}
+        \item veliki setovi podatka ne mogu nadomjestiti reprezentativnost
+            uzorka \tinycitep{mengStatisticalParadisesParadoxes2018}
+
+        \pause
+
+        \item standardni statistički modeli ne mogu zamijeniti znanstvenu
+            ekspertizu
+            \tinycitep{mcelreathStatisticalRethinkingBayesian2020,
+            navarroIfMathematicalPsychology2020,navarroDevilDeepBlue2019}
+
+        \pause
+
+        \item važnost razvoja formalnih teorija
+            \tinycitep{fiedlerToolsToysTruisms2004}
+    \end{itemize}
+\end{frame}
 
 \section{Modeli procesiranja jezika}
 
@@ -179,6 +239,26 @@
         \sectionpage
     \end{frame}
 \end{noheadline}
+
+\subsection{Drift-diffusion model}
+
+\begin{frame}
+    \frametitle{Drift-diffusion model}
+
+    \begin{itemize}
+        \item test
+    \end{itemize}
+\end{frame}
+
+\subsection{Bayesian reader}
+
+\begin{frame}
+    \frametitle{Bayesian reader}
+
+    \begin{itemize}
+        \item tmpp
+    \end{itemize}
+\end{frame}
 
 \section{\textit{Multiverse} analiza}
 
