dodao Drift-diffusion

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -188,8 +188,7 @@
             \pause
 
             \item preciznija procjena parametara i prijatelji
-                \tinycitep{yarkoniChoosingPredictionExplanation2017,
-                mengStatisticalParadisesParadoxes2018}
+                \tinycitep{yarkoniChoosingPredictionExplanation2017}
         \end{itemize}
 
     \end{itemize}
@@ -243,20 +242,50 @@
 \subsection{Drift-diffusion model}
 
 \begin{frame}
-    \frametitle{Drift-diffusion model}
+    \frametitle{Drift-diffusion model \citep{ratcliffTheoryMemoryRetrieval1978}}
 
     \begin{itemize}
-        \item test
+        \item zamišljen kao okvir koji može obuhvatiti različite paradigme u
+            kognitivnoj psihologiji
+
+        \pause
+
+        \item primijenjen i na zadatak leksičke odluke
+            \begin{itemize}
+                \item do odluke se dolazi kroz proces koji tijekom vremena
+                    prikuplja nejasne (\textit{noisy}) informacije
+
+                \item informacije se prikupljaju sve dok se ne dosegne jedan od
+                    kriterija za odlučivanje --- niz znakova je ili nije riječ
+            \end{itemize}
+
+        \pause
+
+        \item uspješno modelira i prosječna vremena reakcija i njihove
+            distribucije
+
+        \item \citet{ratcliffDiffusionModelAccount2004} pokazali su osjetljivost
+            modela na frekvencije riječi
     \end{itemize}
 \end{frame}
 
 \subsection{Bayesian reader}
 
 \begin{frame}
-    \frametitle{Bayesian reader}
+    \frametitle{Bayesian reader \citep{norrisBayesianReaderExplaining2006}}
 
     \begin{itemize}
         \item tmpp
+    \end{itemize}
+\end{frame}
+
+\subsection{Modeli i megastudije}
+
+\begin{frame}
+    \frametitle{Modeli procesiranja jezika i megastudije}
+
+    \begin{itemize}
+        \item tmp
     \end{itemize}
 \end{frame}
 
