dodao kostur za multiverse

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -39,7 +39,7 @@
 
 \usecolortheme{dove}
 
-\setbeamertemplate{itemize/enumerate items}[default]
+\setbeamertemplate{itemize items}[default]
 
 \setbeamertemplate{itemize item}{\textbullet}
 \setbeamertemplate{itemize subitem}{\(\triangleright\)}
@@ -275,7 +275,25 @@
     \frametitle{Bayesian reader \citep{norrisBayesianReaderExplaining2006}}
 
     \begin{itemize}
-        \item tmpp
+        \item specifično za čitanje
+
+        \pause
+
+        \item kreće od pretpostavke o idealnom opažaču koji donosi optimalne
+            odluke
+
+        \pause
+
+        \item optimalno ponašanje ovisi o konkretnom zadatku koji opažač treba
+            obaviti
+
+        \item podaci koje opažač dobiva u sebi imaju šum, zbog čega mogu nastati
+            pogreške u izvršavanju zadatka
+
+        \pause
+
+        \item uspješno lovi učinak frekvencije riječi, te učinak ortografske
+            sličnosti (?)
     \end{itemize}
 \end{frame}
 
@@ -285,7 +303,19 @@
     \frametitle{Modeli procesiranja jezika i megastudije}
 
     \begin{itemize}
-        \item tmp
+        \item obilje otvorenih podataka dobivenih u megastudijama pogodno za
+            testiranje različitih modela
+
+            \begin{itemize}
+                \item kros-validacija
+
+                \item procjena parametara
+
+                \item brzo testiranje prototipova i modifikacija modela
+
+                \item testiranje modela na različitim jezicima
+            \end{itemize}
+
     \end{itemize}
 \end{frame}
 
@@ -296,6 +326,47 @@
         \sectionpage
     \end{frame}
 \end{noheadline}
+
+\subsection{Od QRP do multiverzuma}
+
+\setbeamertemplate{enumerate item}{\Roman{enumi})}
+
+\begin{frame}
+    \frametitle{Od QRP do multiverzuma}
+
+    \begin{enumerate}
+        \item QRP --- eng. \textit{questionable research practices}
+            \tinycitep{johnMeasuringPrevalenceQuestionable2012}
+
+        \pause
+
+        \begin{itemize}
+            \item nisu naveli sve zavisne varijable
+            
+            \item nisu naveli sve eksperimentalne situacije
+
+            \item isključivanje podataka nakon što su pogledali kako to utječe
+                na rezulate
+        \end{itemize}
+
+        \pause
+
+        \item mnogo različitih načina na koje se podaci \emph{mogu analizirati}
+            \tinycitep{gelmanGardenForkingPaths2013}
+
+        \pause
+
+        \item mnogo različitih načina na koje se podaci \emph{analiziraju}
+            \tinycitep{silberzahnManyAnalystsOne2018}
+
+    \end{enumerate}
+\end{frame}
+
+\subsection{\textit{Multiverse} analize}
+
+\begin{frame}
+    \frametitle{IV) \textit{Multiverse} analize}
+\end{frame}
 
 \setbeamertemplate{headline}{}
 
