--- a/reference.bib
+++ b/reference.bib
@@ -879,6 +879,22 @@
   number = {3}
 }
 
+@article{elliottWhatTestRetestReliability2020,
+  title = {What {{Is}} the {{Test}}-{{Retest Reliability}} of {{Common Task}}-{{Functional MRI Measures}}? {{New Empirical Evidence}} and a {{Meta}}-{{Analysis}}},
+  shorttitle = {What {{Is}} the {{Test}}-{{Retest Reliability}} of {{Common Task}}-{{Functional MRI Measures}}?},
+  author = {Elliott, Maxwell L. and Knodt, Annchen R. and Ireland, David and Morris, Meriwether L. and Poulton, Richie and Ramrakha, Sandhya and Sison, Maria L. and Moffitt, Terrie E. and Caspi, Avshalom and Hariri, Ahmad R.},
+  year = {2020},
+  month = jun,
+  pages = {095679762091678},
+  issn = {0956-7976, 1467-9280},
+  doi = {10.1177/0956797620916786},
+  abstract = {Identifying brain biomarkers of disease risk is a growing priority in neuroscience. The ability to identify meaningful biomarkers is limited by measurement reliability; unreliable measures are unsuitable for predicting clinical outcomes. Measuring brain activity using task functional MRI (fMRI) is a major focus of biomarker development; however, the reliability of task fMRI has not been systematically evaluated. We present converging evidence demonstrating poor reliability of task-fMRI measures. First, a meta-analysis of 90 experiments (N = 1,008) revealed poor overall reliability\textemdash{}mean intraclass correlation coefficient (ICC) = .397. Second, the test-retest reliabilities of activity in a priori regions of interest across 11 common fMRI tasks collected by the Human Connectome Project (N = 45) and the Dunedin Study (N = 20) were poor (ICCs = .067\textendash.485). Collectively, these findings demonstrate that common task-fMRI measures are not currently suitable for brain biomarker discovery or for individual-differences research. We review how this state of affairs came to be and highlight avenues for improving task-fMRI reliability.},
+  file = {/home/denis/Zotero/storage/XCXU9WMF/Elliott et al. - 2020 - What Is the Test-Retest Reliability of Common Task.pdf},
+  journal = {Psychological Science},
+  keywords = {fmri,meta-science,metodologija},
+  language = {en}
+}
+
 @article{ercegEffectMoralCongruence2018,
   title = {The {{Effect}} of {{Moral Congruence}} of {{Calls}} to {{Action}} and {{Salient Social Norms}} on {{Online Charitable Donations}}: {{A Protocol Study}}},
   shorttitle = {The {{Effect}} of {{Moral Congruence}} of {{Calls}} to {{Action}} and {{Salient Social Norms}} on {{Online Charitable Donations}}},
@@ -1649,6 +1665,24 @@ Conclusions: Choice of method for dealing with missing data is crucial for valid
   author = {{JASP Team}},
   year = {2018},
   keywords = {software}
+}
+
+@article{johnMeasuringPrevalenceQuestionable2012,
+  title = {Measuring the {{Prevalence}} of {{Questionable Research Practices With Incentives}} for {{Truth Telling}}},
+  author = {John, Leslie K. and Loewenstein, George and Prelec, Drazen},
+  year = {2012},
+  month = may,
+  volume = {23},
+  pages = {524--532},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0956-7976},
+  doi = {10.1177/0956797611430953},
+  abstract = {Cases of clear scientific misconduct have received significant media attention recently, but less flagrantly questionable research practices may be more prevalent and, ultimately, more damaging to the academic enterprise. Using an anonymous elicitation format supplemented by incentives for honest reporting, we surveyed over 2,000 psychologists about their involvement in questionable research practices. The impact of truth-telling incentives on self-admissions of questionable research practices was positive, and this impact was greater for practices that respondents judged to be less defensible. Combining three different estimation methods, we found that the percentage of respondents who have engaged in questionable practices was surprisingly high. This finding suggests that some questionable practices may constitute the prevailing research norm.},
+  file = {/home/denis/Zotero/storage/UHI3I9YX/John et al. - 2012 - Measuring the Prevalence of Questionable Research .pdf},
+  journal = {Psychological Science},
+  keywords = {meta-science,metodologija},
+  language = {en},
+  number = {5}
 }
 
 @article{juddExperimentsMoreOne2017,
@@ -3094,6 +3128,23 @@ Conclusion: We provide evidence that for MAR data, valid MI reduces bias even wh
   isbn = {978-1-84787-136-7}
 }
 
+@article{silberzahnManyAnalystsOne2018,
+  title = {Many {{Analysts}}, {{One Data Set}}: {{Making Transparent How Variations}} in {{Analytic Choices Affect Results}}},
+  shorttitle = {Many {{Analysts}}, {{One Data Set}}},
+  author = {Silberzahn, R. and Uhlmann, E. L. and Martin, D. P. and Anselmi, P. and Aust, F. and Awtrey, E. and Bahn{\'i}k, {\v S}. and Bai, F. and Bannard, C. and Bonnier, E. and Carlsson, R. and Cheung, F. and Christensen, G. and Clay, R. and Craig, M. A. and Dalla Rosa, A. and Dam, L. and Evans, M. H. and Flores Cervantes, I. and Fong, N. and {Gamez-Djokic}, M. and Glenz, A. and {Gordon-McKeon}, S. and Heaton, T. J. and Hederos, K. and Heene, M. and Hofelich Mohr, A. J. and H{\"o}gden, F. and Hui, K. and Johannesson, M. and Kalodimos, J. and Kaszubowski, E. and Kennedy, D. M. and Lei, R. and Lindsay, T. A. and Liverani, S. and Madan, C. R. and Molden, D. and Molleman, E. and Morey, R. D. and Mulder, L. B. and Nijstad, B. R. and Pope, N. G. and Pope, B. and Prenoveau, J. M. and Rink, F. and Robusto, E. and Roderique, H. and Sandberg, A. and Schl{\"u}ter, E. and Sch{\"o}nbrodt, F. D. and Sherman, M. F. and Sommer, S. A. and Sotak, K. and Spain, S. and Sp{\"o}rlein, C. and Stafford, T. and Stefanutti, L. and Tauber, S. and Ullrich, J. and Vianello, M. and Wagenmakers, E.-J. and Witkowiak, M. and Yoon, S. and Nosek, B. A.},
+  year = {2018},
+  month = sep,
+  volume = {1},
+  pages = {337--356},
+  issn = {2515-2459, 2515-2467},
+  doi = {10.1177/2515245917747646},
+  abstract = {Twenty-nine teams involving 61 analysts used the same data set to address the same research question: whether soccer referees are more likely to give red cards to dark-skin-toned players than to light-skin-toned players. Analytic approaches varied widely across the teams, and the estimated effect sizes ranged from 0.89 to 2.93 (Mdn = 1.31) in odds-ratio units. Twenty teams (69\%) found a statistically significant positive effect, and 9 teams (31\%) did not observe a significant relationship. Overall, the 29 different analyses used 21 unique combinations of covariates. Neither analysts' prior beliefs about the effect of interest nor their level of expertise readily explained the variation in the outcomes of the analyses. Peer ratings of the quality of the analyses also did not account for the variability. These findings suggest that significant variation in the results of analyses of complex data may be difficult to avoid, even by experts with honest intentions. Crowdsourcing data analysis, a strategy in which numerous research teams are recruited to simultaneously investigate the same research question, makes transparent how defensible, yet subjective, analytic choices influence research results.},
+  file = {/home/denis/Zotero/storage/KEQCJJUQ/Silberzahn et al. - 2018 - Many Analysts, One Data Set Making Transparent Ho.pdf},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  language = {en},
+  number = {3}
+}
+
 @article{simmonsPowerPosingPcurving2017,
   title = {Power Posing: {{P}}-Curving the Evidence},
   author = {Simmons, Joseph P. and Simonsohn, Uri},
@@ -3232,6 +3283,23 @@ Conclusion: We provide evidence that for MAR data, valid MI reduces bias even wh
   publisher = {{Elsevier}},
   journal = {Journal of experimental child psychology},
   keywords = {psihologija-jezika,word-exposure}
+}
+
+@article{steegenIncreasingTransparencyMultiverse2016,
+  title = {Increasing {{Transparency Through}} a {{Multiverse Analysis}}},
+  author = {Steegen, Sara and Tuerlinckx, Francis and Gelman, Andrew and Vanpaemel, Wolf},
+  year = {2016},
+  month = sep,
+  volume = {11},
+  pages = {702--712},
+  issn = {1745-6916, 1745-6924},
+  doi = {10.1177/1745691616658637},
+  abstract = {Empirical research inevitably includes constructing a data set by processing raw data into a form ready for statistical analysis. Data processing often involves choices among several reasonable options for excluding, transforming, and coding data. We suggest that instead of performing only one analysis, researchers could perform a multiverse analysis, which involves performing all analyses across the whole set of alternatively processed data sets corresponding to a large set of reasonable scenarios. Using an example focusing on the effect of fertility on religiosity and political attitudes, we show that analyzing a single data set can be misleading and propose a multiverse analysis as an alternative practice. A multiverse analysis offers an idea of how much the conclusions change because of arbitrary choices in data construction and gives pointers as to which choices are most consequential in the fragility of the result.},
+  file = {/home/denis/Zotero/storage/Y9DICJVC/Steegen et al. - 2016 - Increasing Transparency Through a Multiverse Analy.pdf},
+  journal = {Perspectives on Psychological Science},
+  keywords = {metodologija,statistika},
+  language = {en},
+  number = {5}
 }
 
 @article{steenMedflexPackageFlexible2017,
