--- a/reference.bib
+++ b/reference.bib
@@ -2988,6 +2988,23 @@ Conclusion: We provide evidence that for MAR data, valid MI reduces bias even wh
   language = {en}
 }
 
+@article{rousseletReactionTimesOther2020,
+  title = {Reaction {{Times}} and Other {{Skewed Distributions}}},
+  shorttitle = {Reaction {{Times}} and Other {{Skewed Distributions}}},
+  author = {Rousselet, Guillaume A. and Wilcox, Rand R.},
+  year = {2020},
+  month = may,
+  volume = {4},
+  issn = {2003-2714},
+  doi = {10.15626/MP.2019.1630},
+  abstract = {To summarise skewed (asymmetric) distributions, such as reaction times, typically the mean or the median are used as measures of central tendency. Using the mean might seem surprising, given that it provides a poor measure of central tendency for skewed distributions, whereas the median provides a better indication of the location of the bulk of the observations. However, the sample median is biased: with small sample sizes, it tends to overestimate the population median. This is not the case for the mean. Based on this observation, Miller (1988) concluded that "sample medians must not be used to compare reaction times across experimental conditions when there are unequal numbers of trials in the conditions". Here we replicate and extend Miller (1988), and demonstrate that his conclusion was ill-advised for several reasons. First, the median's bias can be corrected using a percentile bootstrap bias correction. Second, a careful examination of the sampling distributions reveals that the sample median is median unbiased, whereas the mean is median biased when dealing with skewed distributions. That is, on average the sample mean estimates the population mean, but typically this is not the case. In addition, simulations of false and true positives in various situations show that no method dominates. Crucially, neither the mean nor the median are sufficient or even necessary to compare skewed distributions. Different questions require different methods and it would be unwise to use the mean or the median in all situations. Better tools are available to get a deeper understanding of how distributions differ: we illustrate the hierarchical shift function, a powerful alternative that relies on quantile estimation. All the code and data to reproduce the figures and analyses in the article are available online.},
+  copyright = {Copyright (c) 2020 Guillaume A Rousselet, Rand R Wilcox},
+  file = {/home/denis/Zotero/storage/U5G73LNF/Rousselet and Wilcox - 2020 - Reaction Times and other Skewed Distributions.pdf;/home/denis/Zotero/storage/PH5R3WP5/1630.html},
+  journal = {Meta-Psychology},
+  keywords = {metodologija,statistika},
+  language = {en}
+}
+
 @article{rubinCausalInferenceUsing2005,
   title = {Causal {{Inference Using Potential Outcomes}}: {{Design}}, {{Modeling}}, {{Decisions}}},
   shorttitle = {Causal {{Inference Using Potential Outcomes}}},
