--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -223,7 +223,7 @@
     \begin{minipage}{24em}
         In certain circles there is an almost religious faith that we can find
         the answers to [causal] questions in the data itself, if only we are
-        sufficiently clever at data mining. However, [\ldots] causal questions
+        sufficiently clever at data mining. However, [...] causal questions
         can never be answered from data alone.
 
         \bigskip
@@ -385,7 +385,7 @@
             \tinycitep{gelmanGardenForkingPaths2013}
 
             \begin{itemize}
-                \item ,,[\ldots] researchers can perform a reasonable analysis
+                \item ,,[...] researchers can perform a reasonable analysis
                     given their assumptions and their data, but had the data
                     turned out differently, they could have done other analyses
                     that were just as reasonable in those circumstances''
@@ -514,7 +514,7 @@
     \begin{center}
         \begin{minipage}{25em}
             O čemu pričamo kad pričamo o procesiranju jezika?
-            \citep{elliottWhatTestRetestReliability2020}
+            \tinycitep{elliottWhatTestRetestReliability2020}
         \end{minipage}
     \end{center}
 \end{frame}
@@ -529,10 +529,10 @@
         \end{minipage}
     }
     \begin{minipage}{24em}
-        The empiricist period [\ldots] is characterized by a general
+        The empiricist period [...] is characterized by a general
         lack of interest in stringent theoretical and metatheoretical thinking.
-        [\ldots]  Industrious research appears to be mainly driven by available
-        research tools [\ldots], methods of analysis [\ldots], and the dynamics
+        [...]  Industrious research appears to be mainly driven by available
+        research tools [...], methods of analysis [...], and the dynamics
         of scientific subcommunities but is surprisingly, often detached from
         clearly spelled-out theories.
 
@@ -542,7 +542,41 @@
         \citep[str. 123]{fiedlerToolsToysTruisms2004}
     \end{minipage}
     \hspace*{\fill}
+\end{frame}
 
+\begin{frame}
+    \hspace*{\fill}
+    \raisebox{74.5pt}{
+        \begin{minipage}[t]{1em}
+            \fontsize{56}{66}\selectfont
+            \bfseries
+            ,,
+        \end{minipage}
+    }
+    \begin{minipage}{24em}
+        There is a one-to-many mapping from scientific to statistical
+        hypotheses.
+
+        \begin{flushright}
+            \bigskip
+            \scriptsize
+            \citep[str. 6]{gelmanGardenForkingPaths2013}
+        \end{flushright}
+
+        \bigskip
+
+        [A] huge proportion of the verbal claims made in empirical psychology
+        articles turn out to have very little relationship with statistical
+        quantities they putatively draw their support from.
+
+        \begin{flushright}
+            \bigskip
+            \scriptsize
+            \raggedleft
+            \citep[str. 2]{yarkoniGeneralizabilityCrisis2019}
+        \end{flushright}
+    \end{minipage}
+    \hspace*{\fill}
 \end{frame}
 
 \setbeamertemplate{headline}{}
