--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 \usepackage[croatian]{babel}
 \usepackage[T1]{fontenc}
@@ -385,7 +385,7 @@
             \tinycitep{gelmanGardenForkingPaths2013}
 
             \begin{itemize}
-                \item ,,[...] researchers can perform a reasonable analysis
+                \item ,,[R]esearchers can perform a reasonable analysis
                     given their assumptions and their data, but had the data
                     turned out differently, they could have done other analyses
                     that were just as reasonable in those circumstances''
@@ -393,10 +393,10 @@
 
                 \pause
 
-                \item povezanost statističkih i znanstvenih hitpozea
+                \item povezanost statističkih i znanstvenih hipoteza
                     \bgroup
                     \scriptsize
-                    \citep[također][]{yarkoniGeneralizabilityCrisis2019}
+                    \citep[također,][]{yarkoniGeneralizabilityCrisis2019}
                     \egroup
             \end{itemize}
 
@@ -462,7 +462,7 @@
 
 \begin{frame}
     \centering
-    \includegraphics[scale=.26]{orben.png}
+    \includegraphics[scale=.25]{orben.png}
 
     \tinycitep{orbenAssociationAdolescentWellbeing2019}
 \end{frame}
@@ -473,7 +473,7 @@
     \frametitle{\textit{Multiverse} analiza i megastudije}
 
     \begin{itemize}
-        \item predprocesiranje podataka
+        \item pretprocesiranje podataka
             \begin{itemize}
                 \item odbaciti vremena reakcija van \(\pm 2 SD\)? \(3 SD\)?
                 \item koje sudionike zadržati na temelju točnosti odgovora?
@@ -533,7 +533,7 @@
         lack of interest in stringent theoretical and metatheoretical thinking.
         [...]  Industrious research appears to be mainly driven by available
         research tools [...], methods of analysis [...], and the dynamics
-        of scientific subcommunities but is surprisingly, often detached from
+        of scientific subcommunities but is surprisingly often detached from
         clearly spelled-out theories.
 
         \bigskip
